# Butler

./: .dockerignore  .env.example  .gitignore  .gitmodules  .sync_cache.json  BUTLER.md  CODE_REVIEW_REPORT.md  DEPLOY.md  DEPLOY_GUIDE.md  Dockerfile  EMBEDDED_GUIDE.md  HARDWARE_GUIDE.md  INPUT_CLASSIFICATION.md  LICENSE  MOVE_BUTLER_EXE.md  Makefile  PORTABLE_MODE_GUIDE.md  RASPBERRY_PI_DEPLOY.md  README.md  README_EN.md  REORG_NOTE.md  SETUP_GUIDE.md  STANDALONE_MCU_GUIDE.md  apk_check.txt  butler.py  butler_cli.py  capture_preview.py  create_skill.py  docker-compose.test.yml  docker-compose.yml  example_workflow.py  external_programs.json  generate_readme_video.py  gesture_recognition.py  install.bat  install.sh  module_execution_config.txt  package.json  pyproject.toml  recovery_tool.py  (+18 more)
Butler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assets/: butler_demo.webm
butler/: CommandPanel.py  __main__.py  algorithms.py  base.py  bash.py  binary_extensions.py  butler_app.py  butler_app_enhanced.py  code_execution_manager.py  collection.py  computer.py  config_wizard.py  data_storage.py  edit.py  external_program_manager.py  intent_dispatcher.py  interpreter.py  legacy_commands.py  main.py  modern_app.py  program_mapping.json  prompts.json  redis_client.py  resource_manager.py  run.py  test_main.py  usb_screen.py  web_server.py
butler_android/: README.md  apk_path_verify.txt  build.gradle.kts  build.sh  pubspec.yaml  settings.gradle.kts
butler_android/app/src/main/python/programs/hybrid_crypto/: Cargo.toml
butler_android/app/src/main/python/programs/hybrid_crypto/src/algorithms/: chacha20.rs
butler_android_flutter/: README.md  gradlew  gradlew.bat  pubspec.yaml
butler_cloud_hub/: README.md  __init__.py  integration_example.py  local_hub.py
config/: README.md  android_sync.toml  config.py  config.yaml  system_config.json
cpp_programs/: Makefile  hello.cpp  hello_executable
data/: HABITS.md  chef_inventory.json  test_tasks.json
deploy/: worker.js
docs/: ARCHITECTURE.md  Butler_Android_Native_Integration_Guide.md  COMMAND_SYSTEM.md  DEPLOY.md  DUAL_MODE_ARCHITECTURAL_BLUEPRINT.md  FRONTEND_MODERN_UI.md  HYBRID_LINK_NOTIFIER_SPEC.md  HYBRID_LINK_SPEC.md  IMPLEMENTATION_DETAILS.md  KARPATHY_EXAMPLES.md  MARKETING_GUIDE.md  NO_AI_CAPABILITIES.md  OOTB_WORKFLOW.md  PORTABLE_MODE_GUIDE.md  PRD_NOTIFIER_SYSTEM.md  QUOTA_SYSTEM.md  SECURITY_AUDIT_REPORT.md  SKILLS_GUIDE.md  SKILL_DEVELOPMENT_STANDARD.md  SKILL_MANAGER_GUIDE.md  STM32_HARDWARE_DESIGN.md  STM32_LCD1602_MOCKUP.md  SYNC_HUB_GUIDE.md  TASKS.md  UI_UPGRADE_PREVIEW.md  butler_agent.proto  butler_agent_pb2.py  butler_agent_pb2_grpc.py  configuration_guide.md  hardware_protocol_v1.md  technical_documentation.md
examples/: file_agent_demo.py
frontend/: README.md  flash_input.html  index.html
frontend_modern/: .eslintrc.cjs  .gitignore  .prettierrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SECURITY.md  flash_input.html  index.html  package.json  tsconfig.json  vite.config.ts  workflow.html
hardware_stm32/: README.md  README_NEW_ARCH.md  USAGE_GUIDE.md
local_interpreter/: README.md  interpreter.py  interpreter_app.py
logs/: application.json
markitdown/: README.md  pyproject.toml
markitdown/src/markitdown/: main.py  markitdown_app.py  smarter.py
markitdown/src/markitdown/converters/: csv_converter.py  docx_converter.py  epub_converter.py  excel_converter.py  html_converter.py  image_converter.py  pdf_converter.py  pptx_converter.py  rtf_converter.py  text.py  txt_converter.py
package/: AccountPassword.py  Limits_of_authority.py  PictureRecognition.py  QR-Code-Recognition.py  TextEditor.py  __init__.py  adbsploit.py  algorithm.py  algorithm1.py  asymmetric_tool.py  autonomous_switch.py  ble_connector.py  crawler.py  crypto_core.py  data_recycler.py  dependency_manager.py  device_config_tool.py  document_interpreter.py  embedding_utils.py  encrypt.py  file_converter.py  hybrid_orchestrator.py  iot_manager.py  knowledge_base_manager.py  main_workflow.txt  markdown_converter.py  marker_tool.py  mqtt_gateway.py  music.py  network_app.py  program_manager.py  standalone_manager.py  terminal.py  translators.py  virtual_keyboard.py  vmail_tool.py  voice_setup.py  weather.py  workflow_manager.py
plugin/: ArchiveManagerPlugin.py  BingSearchPlugin.py  CountdownPlugin.py  FibonacciPlugin.py  FileSearchPlugin.py  GlobalFileSearchPlugin.py  GreetingPlugin.py  JokePlugin.py  MemoPlugin.py  NotepadPlugin.py  PluginManager.py  SearchPlugin.py  SystemShieldPlugin.py  TimePlugin.py  TodoPlugin.py  UserProfilePlugin.py  abstract_plugin.py  add_long_memory.py  clear_recent_memory.py  download_url.py  memory_engine.py  plugin_interface.py  read_file.py  user_profile_plugin.py  write_file.py
scripts/: build_android.sh  build_butler_android.sh  create_skill.py  dependency_check.py  install.ps1  install.sh  launcher.c  start_pc.sh  sync_android.py
skills/: systematic-debugging  task-management
src/: Butler.py
stm32_firmware/: main.c
tests/: conftest.py  test_action_bridge.py  test_agent_orchestrator.py  test_algorithms.py  test_api_validator.py  test_butler.py  test_config_backup.py  test_import.py  test_imports.py  test_iron_backend.py  test_ldst_blackboard.py  test_memos_skill.py  test_new_skills.py  test_pydantic_import.py  test_security.py  test_skill_isolation.py  test_smoke.py  test_storage_hub.py  test_task_manager.py  test_voice_system.py  test_webdav_adapter.py
verification/: generate_pet_preview.py  mock_chaquo.py  run_notifier_verification.py  test_api_gateway.py  test_archive_manager.py  test_core_plugins.py  test_downloader_backend.py  test_encrypt_v3.py  test_execution_security.py  test_format_convert.py  test_kairos.py  test_kairos_fixes.py  test_kairos_modes.py  test_legacy_migration.py  test_memory_robustness.py  test_memos_upgrade.py  test_nlu_security.py  test_sdlc_orchestrator.py  test_self_destruct.py  test_skills_v2.py  test_storage_hub_backend.py  test_vault_and_account.py  verify_bg.py  verify_document_studio.py  (+13 more)
(+1023 files in other folders)
