[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Butler"
version = "2.0.0"
description = "一种基于Python的高级智能助手系统"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "PAYDAY3", email = "error123456ew@outlook.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
    # default install includes core + office + llm
    "Flask",
    "requests>=2.32.0",
    "python-dotenv",
    "PyYAML",
    "psutil",
    "watchdog",
    "schedule",
    "tabulate",
    "tqdm",
    "chardet",
    "beautifulsoup4",
    "markdownify",
    "lxml",
    "defusedxml",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "pypdf",
    "pdfplumber",
    "ebooklib",
    "rtf-converter",
    "reportlab",
    "openai",
    "anthropic",
    "deepseek",
    "instructor"
]

[project.optional-dependencies]
core = [
    "Flask",
    "requests>=2.32.0",
    "python-dotenv",
    "PyYAML",
    "psutil",
    "watchdog",
    "schedule",
    "tabulate",
    "tqdm",
    "chardet",
    "beautifulsoup4",
    "markdownify",
    "lxml",
    "defusedxml"
]
audio = [
    "pyttsx3",
    "pydub",
    "pyaudio",
    "sounddevice",
    "pvrecorder",
    "pypinyin"
]
vision = [
    "opencv-python",
    "pytesseract",
    "Pillow",
    "mss"
]
office = [
    "openpyxl",
    "python-docx",
    "python-pptx",
    "pypdf",
    "pdfplumber",
    "ebooklib",
    "rtf-converter",
    "reportlab"
]
llm = [
    "openai",
    "anthropic",
    "deepseek",
    "instructor"
]
crawler = [
    "scrapy",
    "selenium",
    "webdriver-manager",
    "twisted>=24.7.0rc1",
    "requests-toolbelt"
]
ml = [
    "scikit-learn",
    "scipy",
    "numpy"
]
redis = [
    "redis",
    "redisvl"
]
cloud = [
    "bypy",
    "baidu-aip"
]
network = [
    "paramiko",
    "websockets"
]
security = [
    "pycryptodome"
]
all = [
    "Flask",
    "requests>=2.32.0",
    "python-dotenv",
    "PyYAML",
    "psutil",
    "watchdog",
    "schedule",
    "tabulate",
    "tqdm",
    "chardet",
    "beautifulsoup4",
    "markdownify",
    "lxml",
    "defusedxml",
    "pyttsx3",
    "pydub",
    "pyaudio",
    "sounddevice",
    "pvrecorder",
    "pypinyin",
    "opencv-python",
    "pytesseract",
    "Pillow",
    "mss",
    "openpyxl",
    "python-docx",
    "python-pptx",
    "pypdf",
    "pdfplumber",
    "ebooklib",
    "rtf-converter",
    "reportlab",
    "openai",
    "anthropic",
    "deepseek",
    "instructor",
    "scrapy",
    "selenium",
    "webdriver-manager",
    "twisted>=24.7.0rc1",
    "requests-toolbelt",
    "scikit-learn",
    "scipy",
    "numpy",
    "redis",
    "redisvl",
    "bypy",
    "baidu-aip",
    "paramiko",
    "websockets",
    "pycryptodome"
]

[project.urls]
Homepage = "https://github.com/HelloEveryboby/Butler"
Documentation = "https://github.com/HelloEveryboby/Butler/wiki"
Source = "https://github.com/HelloEveryboby/Butler"
Tracker = "https://github.com/HelloEveryboby/Butler/issues"

[project.scripts]
butler = "butler.butler_app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["butler*", "package*"]

# ==========================================
# Ruff 配置 — Butler 项目代码规范
# ==========================================

[tool.ruff]
target-version = "py310"
line-length = 120

# 排除不需要检查的目录
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "lib_external",
    "temp_android_repo",
    ".gradle",
    "node_modules",
    "frontend",
    "frontend_modern",
    "butler_android",
    "butler_android_b",
    "butler_android_c",
    "butler-cloud-hub",
    "butler-frontend-upgrade",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]

# 忽略的规则
ignore = [
    "E501",   # line too long (由 formatter 处理)
    "S101",   # assert allowed (测试中需要)
    "S603",   # subprocess call (Butler 需要执行系统命令)
    "S607",   # partial executable path
    "S604",   # function call with shell=True
    "B008",   # function call in default argument
    "UP007",  # use X | Y for union types (兼容 3.9)
]

[tool.ruff.lint.per-file-ignores]
# 测试文件允许 assert、magic methods
"tests/**/*.py" = ["S101", "S106"]
# 允许 __init__.py 的 wildcard import
"__init__.py" = ["F401"]
# scripts 允许 shell 调用
"scripts/**/*.py" = ["S603", "S607"]
# install 脚本允许各种 security check / bugbear bypass
"install*.py" = ["S", "B"]

[tool.ruff.lint.isort]
known-first-party = ["butler", "package"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod", "pydantic.validator", "pydantic.root_validator"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==========================================
# pytest 配置
# ==========================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "-x",  # 遇到第一个失败就停止
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
    "security: marks security-related tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
