[package]
name = "hybrid_crypto_exec"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "hybrid_crypto_exec"
path = "src/crypto_service.rs"

[dependencies]
hex = "0.4.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
anyhow = "1.0.95"
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
strip = true
